@@ -23,6 +23,7 @@ Version 1.7.0+svn:
    * Objectives now use pango markup
    * Replace the campaign dialog with a new gui one (debian bug #497655)
    * Removed the hidden option to disable the tips of the day
+   * A click on a slider now properly sets the position
  * WML Engine:
    * Made new turn, turn X, side turn and turn refresh events synchronous.
      (bug #10603)
